Fix clipped tile-expansion in photo grid.

--- a/src/stylesheets/components/photo/_grid.scss
+++ b/src/stylesheets/components/photo/_grid.scss
@@ -17,14 +17,14 @@
   }
 
   .runway {
-    contain: strict;
+    contain: layout style size;
   }
 
   .viewport {
     display: flex;
     flex-wrap: wrap;
     align-content: flex-start;
-    contain: content;
+    contain: layout style;
     will-change: transform;
   }
 
